infra/k8s/monitoring/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: honks-monitoring
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
